Fix domain name spelling and convert emails to links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div class="top-bar">
         <div class="container">
             <div class="contact-info">
-                <i class="fas fa-envelope"></i> info@dermocéan.com
+                <i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com"
+                    style="color: inherit; text-decoration: none;">info@dermocéan.com</a>
             </div>
             <div class="lang-selector">
                 <a href="#" onclick="changeLanguage('en')" class="active" data-lang="en">EN</a>
@@ -226,7 +227,8 @@
                 <div class="footer-col">
                     <h4 data-i18n="contactUs">Contact Us</h4>
                     <ul class="footer-links">
-                        <li><i class="fas fa-envelope"></i> info@dermocéan.com</li>
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com">info@dermocéan.com</a>
+                        </li>
                         <li><i class="fas fa-phone"></i> +90 545 533 6663</li>
                         <li><i class="fab fa-instagram"></i> @dermoceanofficial</li>
                     </ul>
