--- a/articles.html
+++ b/articles.html
@@ -26,7 +26,8 @@
     <div class="top-bar">
         <div class="container">
             <div class="contact-info">
-                <i class="fas fa-envelope"></i> info@dermocéan.com
+                <i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com"
+                    style="color: inherit; text-decoration: none;">info@dermocéan.com</a>
             </div>
             <div class="lang-selector">
                 <a href="#" onclick="changeLanguage('en')" class="active" data-lang="en">EN</a>
@@ -174,7 +175,7 @@
                 </div>
                 <div class="footer-contact">
                     <h4 data-i18n="contactUs">Contact Us</h4>
-                    <p><i class="fas fa-envelope"></i> info@dermocéan.com</p>
+                    <p><i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com">info@dermocéan.com</a></p>
                     <p><i class="fab fa-whatsapp"></i> +90 545 533 6663</p>
                 </div>
                 <div class="footer-payment">
