--- a/register.html
+++ b/register.html
@@ -19,7 +19,8 @@
     <div class="top-bar">
         <div class="container">
             <div class="contact-info">
-                <i class="fas fa-envelope"></i> info@dermocéan.com
+                <i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com"
+                    style="color: inherit; text-decoration: none;">info@dermocéan.com</a>
             </div>
             <div class="lang-selector">
                 <a href="#" onclick="changeLanguage('en')" class="active" data-lang="en">EN</a>
@@ -43,8 +44,9 @@
 
             <ul class="nav-links">
                 <li><a href="index.html" data-i18n="home">Home</a></li>
+                <li><a href="about.html" data-i18n="aboutUs">About</a></li>
                 <li><a href="index.html#products" data-i18n="products">Products</a></li>
-                <li><a href="index.html#protocols" data-i18n="protocols">Protocols</a></li>
+                <li><a href="how-to-use.html" data-i18n="howToUse">How to Use</a></li>
                 <li><a href="videos.html" data-i18n="videos">Videos</a></li>
                 <li><a href="register.html" class="btn btn-outline active" data-i18n="register">B2B Register</a></li>
             </ul>
@@ -116,6 +118,53 @@
         <i class="fab fa-whatsapp"></i>
     </a>
 
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-col">
+                    <h4 data-i18n="aboutDermocean">About Dermocean</h4>
+                    <p style="color: #aaa; font-size: 0.9rem;" data-i18n="aboutText">
+                        Leading B2B skincare provider for beauty centers.
+                        Combining nature's finest ingredients with scientific innovation.
+                    </p>
+                </div>
+                <div class="footer-col">
+                    <h4 data-i18n="quickLinks">Quick Links</h4>
+                    <ul class="footer-links">
+                        <li><a href="index.html" data-i18n="home">Home</a></li>
+                        <li><a href="about.html" data-i18n="aboutUs">About</a></li>
+                        <li><a href="how-to-use.html" data-i18n="howToUse">How to Use</a></li>
+                        <li><a href="videos.html" data-i18n="videos">Videos</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4 data-i18n="contactUs">Contact Us</h4>
+                    <ul class="footer-links">
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com">info@dermocéan.com</a>
+                        </li>
+                        <li><i class="fas fa-phone"></i> +90 545 533 6663</li>
+                        <li><i class="fab fa-instagram"></i> @dermoceanofficial</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <p>&copy; 2025 DERMOCÉAN. All Rights Reserved.</p>
+                <div class="payment-methods" style="justify-content: center; margin-top: 1rem;">
+                    <div class="payment-method">
+                        <i class="fas fa-money-bill-wave icon"></i>
+                        <span data-i18n="cashOnDelivery">Cash on Delivery</span>
+                    </div>
+                    <div class="payment-method">
+                        <i class="fas fa-university icon"></i>
+                        <span data-i18n="bankTransfer">Bank Transfer</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <!-- Mobile Menu Overlay -->
     <div class="mobile-overlay"></div>
 
@@ -127,10 +176,17 @@
         </div>
         <div class="mobile-menu-items">
             <a href="index.html" data-i18n="home">Home</a>
+            <a href="about.html" data-i18n="aboutUs">About</a>
             <a href="index.html#products" data-i18n="products">Products</a>
-            <a href="index.html#protocols" data-i18n="protocols">Protocols</a>
+            <a href="how-to-use.html" data-i18n="howToUse">How to Use</a>
             <a href="videos.html" data-i18n="videos">Videos</a>
             <a href="register.html" data-i18n="register">B2B Register</a>
+        </div>
+        <div class="mobile-lang-selector" style="margin-top: 2rem; justify-content: center; display: flex; gap: 1rem;">
+            <a href="#" onclick="changeLanguage('en')" data-lang="en">EN</a>
+            <a href="#" onclick="changeLanguage('fr')" data-lang="fr">FR</a>
+            <a href="#" onclick="changeLanguage('ar')" data-lang="ar">AR</a>
+            <a href="#" onclick="changeLanguage('tr')" data-lang="tr">TR</a>
         </div>
     </div>
 
