Fix PDF paths, add 100+ translations for all pages, fix products loading

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <p data-i18n="protocolsDesc">Professional guidelines for optimal results</p>
 
                     <div class="pdf-actions">
-                        <a href="Assets/Dermocean Catalog_20250101_133917_0000.pdf" class="btn btn-outline" download
+                        <a href="Assets/DERMOCEAN CATALOG_compressed.pdf" class="btn btn-outline" download
                             data-i18n="downloadCatalog">
                             <i class="fas fa-download"></i> Download Catalog
                         </a>
@@ -193,7 +193,7 @@
                     <!-- Hidden by default PDF Container -->
                     <div id="pdf-viewer-container" class="pdf-viewer-container">
                         <div class="pdf-frame-wrapper">
-                            <iframe src="Assets/Protocol.pdf" frameborder="0"></iframe>
+                            <iframe src="Assets/deromcean protocol_compressed.pdf" frameborder="0"></iframe>
                         </div>
                     </div>
                 </div>
