--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <li><a href="about.html" data-i18n="aboutUs">About</a></li>
                 <li><a href="#products" data-i18n="products">Products</a></li>
                 <li><a href="how-to-use.html" data-i18n="howToUse">How to Use</a></li>
+                <li><a href="articles.html" data-i18n="articles">Articles</a></li>
                 <li><a href="videos.html" data-i18n="videos">Videos</a></li>
                 <li><a href="register.html" class="btn btn-outline" data-i18n="register">B2B Register</a></li>
             </ul>
@@ -206,7 +207,8 @@
     <div class="protocol-modal" id="protocol-modal">
         <div class="protocol-modal-content">
             <button class="modal-close" onclick="closeProtocolModal()"><i class="fas fa-times"></i></button>
-            <div id="protocol-modal-body">
+            <h3 id="protocol-title"></h3>
+            <div id="protocol-content">
                 <!-- Content injected by JS -->
             </div>
         </div>
@@ -309,8 +311,10 @@
         </div>
         <div class="mobile-menu-items">
             <a href="index.html" data-i18n="home">Home</a>
+            <a href="about.html" data-i18n="aboutUs">About</a>
             <a href="#products" data-i18n="products">Products</a>
-            <a href="#protocols" data-i18n="protocols">Protocols</a>
+            <a href="how-to-use.html" data-i18n="howToUse">How to Use</a>
+            <a href="articles.html" data-i18n="articles">Articles</a>
             <a href="videos.html" data-i18n="videos">Videos</a>
             <a href="register.html" data-i18n="register">B2B Register</a>
         </div>
