--- a/about.html
+++ b/about.html
@@ -30,10 +30,10 @@
                     style="color: inherit; text-decoration: none;">info@dermocéan.com</a>
             </div>
             <div class="lang-selector">
-                <a href="#" onclick="changeLanguage('en')" class="active" data-lang="en">EN</a>
-                <a href="#" onclick="changeLanguage('fr')" data-lang="fr">FR</a>
-                <a href="#" onclick="changeLanguage('ar')" data-lang="ar">AR</a>
-                <a href="#" onclick="changeLanguage('tr')" data-lang="tr">TR</a>
+                <a href="#" onclick="changeLanguage('en')" class="active" data-lang="en"><span>🇺🇸</span> EN</a>
+                <a href="#" onclick="changeLanguage('fr')" data-lang="fr"><span>🇫🇷</span> FR</a>
+                <a href="#" onclick="changeLanguage('ar')" data-lang="ar"><span>🇸🇦</span> AR</a>
+                <a href="#" onclick="changeLanguage('tr')" data-lang="tr"><span>🇹🇷</span> TR</a>
             </div>
         </div>
     </div>
@@ -52,6 +52,7 @@
                 <li><a href="about.html" class="active" data-i18n="aboutUs">About Us</a></li>
                 <li><a href="index.html#products" data-i18n="products">Products</a></li>
                 <li><a href="how-to-use.html" data-i18n="howToUse">How to Use</a></li>
+                <li><a href="articles.html" data-i18n="articles">Articles</a></li>
                 <li><a href="videos.html" data-i18n="videos">Videos</a></li>
                 <li><a href="register.html" class="btn btn-outline" data-i18n="register">B2B Register</a></li>
             </ul>
@@ -70,14 +71,15 @@
             <li><a href="about.html" data-i18n="aboutUs">About Us</a></li>
             <li><a href="index.html#products" data-i18n="products">Products</a></li>
             <li><a href="how-to-use.html" data-i18n="howToUse">How to Use</a></li>
+            <li><a href="articles.html" data-i18n="articles">Articles</a></li>
             <li><a href="videos.html" data-i18n="videos">Videos</a></li>
             <li><a href="register.html" data-i18n="register">B2B Register</a></li>
         </ul>
         <div class="mobile-lang-selector">
-            <a href="#" onclick="changeLanguage('en')" data-lang="en">EN</a>
-            <a href="#" onclick="changeLanguage('fr')" data-lang="fr">FR</a>
-            <a href="#" onclick="changeLanguage('ar')" data-lang="ar">AR</a>
-            <a href="#" onclick="changeLanguage('tr')" data-lang="tr">TR</a>
+            <a href="#" onclick="changeLanguage('en')" data-lang="en"><span>🇺🇸</span> EN</a>
+            <a href="#" onclick="changeLanguage('fr')" data-lang="fr"><span>🇫🇷</span> FR</a>
+            <a href="#" onclick="changeLanguage('ar')" data-lang="ar"><span>🇸🇦</span> AR</a>
+            <a href="#" onclick="changeLanguage('tr')" data-lang="tr"><span>🇹🇷</span> TR</a>
         </div>
     </div>
 
