--- a/register.html
+++ b/register.html
@@ -23,10 +23,10 @@
                     style="color: inherit; text-decoration: none;">info@dermocéan.com</a>
             </div>
             <div class="lang-selector">
-                <a href="#" onclick="changeLanguage('en')" class="active" data-lang="en">EN</a>
-                <a href="#" onclick="changeLanguage('fr')" data-lang="fr">FR</a>
-                <a href="#" onclick="changeLanguage('ar')" data-lang="ar">AR</a>
-                <a href="#" onclick="changeLanguage('tr')" data-lang="tr">TR</a>
+                <a href="#" onclick="changeLanguage('en')" class="active" data-lang="en"><span>🇺🇸</span> EN</a>
+                <a href="#" onclick="changeLanguage('fr')" data-lang="fr"><span>🇫🇷</span> FR</a>
+                <a href="#" onclick="changeLanguage('ar')" data-lang="ar"><span>🇸🇦</span> AR</a>
+                <a href="#" onclick="changeLanguage('tr')" data-lang="tr"><span>🇹🇷</span> TR</a>
             </div>
         </div>
     </div>
@@ -47,6 +47,7 @@
                 <li><a href="about.html" data-i18n="aboutUs">About</a></li>
                 <li><a href="index.html#products" data-i18n="products">Products</a></li>
                 <li><a href="how-to-use.html" data-i18n="howToUse">How to Use</a></li>
+                <li><a href="articles.html" data-i18n="articles">Articles</a></li>
                 <li><a href="videos.html" data-i18n="videos">Videos</a></li>
                 <li><a href="register.html" class="btn btn-outline active" data-i18n="register">B2B Register</a></li>
             </ul>
@@ -179,14 +180,15 @@
             <a href="about.html" data-i18n="aboutUs">About</a>
             <a href="index.html#products" data-i18n="products">Products</a>
             <a href="how-to-use.html" data-i18n="howToUse">How to Use</a>
+            <a href="articles.html" data-i18n="articles">Articles</a>
             <a href="videos.html" data-i18n="videos">Videos</a>
             <a href="register.html" data-i18n="register">B2B Register</a>
         </div>
         <div class="mobile-lang-selector" style="margin-top: 2rem; justify-content: center; display: flex; gap: 1rem;">
-            <a href="#" onclick="changeLanguage('en')" data-lang="en">EN</a>
-            <a href="#" onclick="changeLanguage('fr')" data-lang="fr">FR</a>
-            <a href="#" onclick="changeLanguage('ar')" data-lang="ar">AR</a>
-            <a href="#" onclick="changeLanguage('tr')" data-lang="tr">TR</a>
+            <a href="#" onclick="changeLanguage('en')" data-lang="en"><span>🇺🇸</span> EN</a>
+            <a href="#" onclick="changeLanguage('fr')" data-lang="fr"><span>🇫🇷</span> FR</a>
+            <a href="#" onclick="changeLanguage('ar')" data-lang="ar"><span>🇸🇦</span> AR</a>
+            <a href="#" onclick="changeLanguage('tr')" data-lang="tr"><span>🇹🇷</span> TR</a>
         </div>
     </div>
 
