--- a/videos.html
+++ b/videos.html
@@ -22,10 +22,10 @@
                     style="color: inherit; text-decoration: none;">info@dermocéan.com</a>
             </div>
             <div class="lang-selector">
-                <a href="#" onclick="changeLanguage('en')" class="active" data-lang="en">EN</a>
-                <a href="#" onclick="changeLanguage('fr')" data-lang="fr">FR</a>
-                <a href="#" onclick="changeLanguage('ar')" data-lang="ar">AR</a>
-                <a href="#" onclick="changeLanguage('tr')" data-lang="tr">TR</a>
+                <a href="#" onclick="changeLanguage('en')" class="active" data-lang="en"><span>🇺🇸</span> EN</a>
+                <a href="#" onclick="changeLanguage('fr')" data-lang="fr"><span>🇫🇷</span> FR</a>
+                <a href="#" onclick="changeLanguage('ar')" data-lang="ar"><span>🇸🇦</span> AR</a>
+                <a href="#" onclick="changeLanguage('tr')" data-lang="tr"><span>🇹🇷</span> TR</a>
             </div>
         </div>
     </div>
@@ -43,8 +43,10 @@
 
             <ul class="nav-links">
                 <li><a href="index.html" data-i18n="home">Home</a></li>
+                <li><a href="about.html" data-i18n="aboutUs">About Us</a></li>
                 <li><a href="index.html#products" data-i18n="products">Products</a></li>
-                <li><a href="index.html#protocols" data-i18n="protocols">Protocols</a></li>
+                <li><a href="how-to-use.html" data-i18n="howToUse">How to Use</a></li>
+                <li><a href="articles.html" data-i18n="articles">Articles</a></li>
                 <li><a href="videos.html" class="active" data-i18n="videos">Videos</a></li>
                 <li><a href="register.html" class="btn btn-outline" data-i18n="register">B2B Register</a></li>
             </ul>
@@ -181,21 +183,52 @@
                     return video[field];
                 }
 
-                grid.innerHTML = videos.map(v => `
-                    <div class="product-card">
-                         <div class="product-image" style="padding:0; height: auto; aspect-ratio: 16/9; background: #000;">
-                             <video controls style="width:100%; height:100%;" poster="${v.poster}">
+                grid.innerHTML = videos.map((v, index) => {
+                    const title = getLocalizedField(v, 'title');
+                    const desc = getLocalizedField(v, 'description');
+                    // const defaultQuality = '720p'; // Unused variable removed
+
+                    return `
+                    <div class="product-card" id="video-card-${index}">
+                         <div class="product-image" style="padding:0; height: auto; aspect-ratio: 16/9; background: #000; position: relative;">
+                             <video id="video-${index}" controls preload="none" style="width:100%; height:100%;" poster="${v.poster}">
                                  <source src="${v.sources['720p']}" type="video/mp4">
+                                 Your browser does not support the video tag.
                              </video>
                          </div>
                          <div class="product-info">
-                             <h3 class="product-name">${getLocalizedField(v, 'title')}</h3>
-                             <p class="text-light">${getLocalizedField(v, 'description')}</p>
+                             <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 0.5rem;">
+                                <h3 class="product-name" style="margin:0;">${title}</h3>
+                                <select class="quality-selector" onchange="changeQuality(${index}, this.value)" style="padding: 2px 5px; border-radius: 4px; border: 1px solid #ddd; font-size: 0.8rem;">
+                                    <option value="360p">360p</option>
+                                    <option value="720p" selected>720p</option>
+                                    <option value="1080p">1080p</option>
+                                </select>
+                             </div>
+                             <p class="text-light">${desc}</p>
                          </div>
                      </div>
-                `).join('');
+                    `;
+                }).join('');
+
+                // Store video data globally for access
+                window.videoData = videos;
             })
             .catch(e => console.error(e));
+
+        // Global function to change quality
+        window.changeQuality = function (index, quality) {
+            const video = document.getElementById(`video-${index}`);
+            const data = window.videoData[index];
+            const currentTime = video.currentTime;
+            const isPlaying = !video.paused;
+
+            if (data && data.sources[quality]) {
+                video.src = data.sources[quality];
+                video.currentTime = currentTime; // Resume from same time
+                if (isPlaying) video.play();
+            }
+        };
     </script>
 </body>
 
