FIX: Restore index.html and apply flags/PDF fixes correctly

--- a/index.html
+++ b/index.html
@@ -1,73 +1,32 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>DERMOCÉAN | Professional Skincare for Beauty Centers</title>
-    <meta name="description"
-        content="Dermocean offers professional-grade marine algae skincare products for beauty centers. Discover our Algae Peeling Powder and proven treatment protocols.">
-    <meta name="keywords"
-        content="skincare, beauty center, algae peeling, professional skincare, B2B skincare, dermocosmetics">
-    <meta name="author" content="Dermocean">
-    <link rel="canonical" href="https://dermocéan.com/">
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://dermocéan.com/">
-    <meta property="og:title" content="DERMOCÉAN | Professional Skincare for Beauty Centers">
-    <meta property="og:description"
-        content="Dermocean offers professional-grade marine algae skincare products for beauty centers. Discover our Algae Peeling Powder and proven treatment protocols.">
-    <meta property="og:image" content="https://dermocéan.com/images/logo/dermocean-logo.svg">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://dermocéan.com/">
-    <meta property="twitter:title" content="DERMOCÉAN | Professional Skincare for Beauty Centers">
-    <meta property="twitter:description"
-        content="Dermocean offers professional-grade marine algae skincare products for beauty centers. Discover our Algae Peeling Powder and proven treatment protocols.">
-    <meta property="twitter:image" content="https://dermocéan.com/images/logo/dermocean-logo.svg">
-
-    <!-- Schema.org Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "Dermocean",
-      "url": "https://dermocéan.com/",
-      "logo": "https://dermocéan.com/images/logo/dermocean-logo.svg",
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+90-545-533-6663",
-        "contactType": "customer service",
-        "areaServed": ["TR", "SA", "FR", "US"],
-        "availableLanguage": ["en", "ar", "fr", "tr"]
-      },
-      "sameAs": [
-        "https://instagram.com/dermoceanofficial"
-      ]
-    }
-    </script>
+    <title>DERMOC├ëAN | Professional Skincare</title>
 
     <!-- Fonts -->
-    <!-- Fonts & Icons -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lato:wght@300;400;700&family=Almarai:wght@700&family=Tajawal:wght@400;700&display=swap"
+        rel="stylesheet">
+
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+    <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="images/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
 </head>
 
 <body>
-    <!-- Page Loader -->
-    <div id="page-loader">
-        <div class="loader-spinner"></div>
-    </div>
 
     <!-- Top Bar -->
     <div class="top-bar">
         <div class="container">
             <div class="contact-info">
-                <i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com"
-                    style="color: inherit; text-decoration: none;">info@dermocéan.com</a>
+                <i class="fas fa-envelope"></i> <a href="mailto:info@dermoc├⌐an.com"
+                    style="color: inherit; text-decoration: none;">info@dermoc├⌐an.com</a>
             </div>
             <div class="lang-selector">
                 <a href="#" onclick="changeLanguage('en')" class="active" data-lang="en"><span
@@ -82,28 +41,172 @@
         </div>
     </div>
 
-    <!-- ... Header ... -->
+    <!-- Header -->
+    <header>
+        <nav class="container">
+            <a href="index.html" class="logo">
+                <img src="images/logo/dermocean-logo.svg" alt="DERMOC├ëAN">
+            </a>
 
-    <!-- PDF Embed Viewer -->
-    <div class="pdf-embed-section">
-        <h3 data-i18n="fullGuide">Full Protocol Guide</h3>
-        <!-- PDF Download & Toggle -->
-        <div class="pdf-embed-section">
-            <p data-i18n="protocolsDesc">Professional guidelines for optimal results</p>
+            <div class="menu-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
 
-            <div class="pdf-actions">
-                <a href="Assets/DERMOCEAN CATALOG_compressed.pdf" class="btn btn-outline" download
-                    data-i18n="downloadCatalog">
-                    <i class="fas fa-download"></i> Download Catalog
-                </a>
-                <!-- Changed to open in new tab for reliability -->
-                <a href="Assets/deromcean protocol_compressed.pdf" target="_blank" class="btn btn-primary">
-                    <i class="fas fa-book-open"></i> <span data-i18n="viewGuide">View Guide</span>
-                </a>
+            <ul class="nav-links">
+                <li><a href="index.html" data-i18n="home">Home</a></li>
+                <li><a href="about.html" data-i18n="aboutUs">About</a></li>
+                <li><a href="#products" data-i18n="products">Products</a></li>
+                <li><a href="how-to-use.html" data-i18n="howToUse">How to Use</a></li>
+                <li><a href="articles.html" data-i18n="articles">Articles</a></li>
+                <li><a href="videos.html" data-i18n="videos">Videos</a></li>
+                <li><a href="register.html" class="btn btn-outline" data-i18n="register">B2B Register</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="container">
+            <div class="hero-content">
+                <div class="hero-text">
+                    <h1 data-i18n="heroTitle">Pure Nature, <span>Proven Results.</span></h1>
+                    <p data-i18n="heroDesc">Advanced skincare formulations designed effectively for professional beauty
+                        centers. Experience the power of marine algae.</p>
+                    <a href="#products" class="btn btn-primary" data-i18n="discoverProducts">Discover Products</a>
+                </div>
+
+                <!-- Case Tabs -->
+                <div class="case-tabs-container">
+                    <div class="case-tabs">
+                        <button class="case-tab active" data-case="pigmentation" onclick="switchCase('pigmentation')">
+                            <span class="tab-en">Pigmentation</span>
+                            <span class="tab-ar">╪¬╪╡╪¿╪║╪º╪¬</span>
+                        </button>
+                        <button class="case-tab" data-case="acne" onclick="switchCase('acne')">
+                            <span class="tab-en">Acne</span>
+                            <span class="tab-ar">╪¡╪¿ ╪º┘ä╪┤╪¿╪º╪¿</span>
+                        </button>
+                        <button class="case-tab" data-case="scars" onclick="switchCase('scars')">
+                            <span class="tab-en">Acne Scars</span>
+                            <span class="tab-ar">╪ó╪½╪º╪▒ ╪º┘ä╪¡╪¿┘ê╪¿</span>
+                        </button>
+                        <button class="case-tab" data-case="lines" onclick="switchCase('lines')">
+                            <span class="tab-en">Fine Lines</span>
+                            <span class="tab-ar">╪¬╪¼╪º╪╣┘è╪»</span>
+                        </button>
+                        <button class="case-tab" data-case="pores" onclick="switchCase('pores')">
+                            <span class="tab-en">Pores</span>
+                            <span class="tab-ar">┘à╪│╪º┘à</span>
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Before/After Slider Component -->
+                <div class="comparison-container">
+                    <div class="comparison-image">
+                        <img id="after-img" src="images/comparison/pigmentation-after.jpeg" alt="After Treatment">
+                    </div>
+                    <div class="img-comp-overlay">
+                        <img id="before-img" src="images/comparison/pigmentation-before.jpeg" alt="Before Treatment">
+                    </div>
+                    <div class="comparison-slider-handle"></div>
+                </div>
             </div>
         </div>
-    </div>
-    </div>
+    </section>
+
+    <!-- Products Section -->
+    <section id="products" class="products-section">
+        <div class="container">
+            <div class="section-title">
+                <h2 data-i18n="ourCollection">Our Collection</h2>
+                <p class="text-center mt-2" data-i18n="professionalGrade">Professional Grade Skincare</p>
+            </div>
+
+            <!-- Dynamic Grid -->
+            <div class="products-grid">
+                <div class="text-center" style="grid-column: 1/-1;">Loading Products...</div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Protocols Section -->
+    <section id="protocols" class="protocols-section">
+        <div class="container">
+            <div class="section-title">
+                <h2 data-i18n="treatmentProtocols">Professional Application Guide</h2>
+                <p class="text-center mt-2" data-i18n="protocolsDesc">Discover our proven treatment protocols</p>
+            </div>
+
+            <div class="protocols-grid">
+                <!-- Protocol Card 1 -->
+                <div class="protocol-card" onclick="openProtocolModal('gentle')">
+                    <div class="protocol-icon">
+                        <i class="fas fa-leaf"></i>
+                    </div>
+                    <h3 data-i18n="gentleProtocol">Gentle Protocol</h3>
+                    <p data-i18n="gentleDesc">For sensitive skin. 2g peeling powder, 4 minutes massage.</p>
+                    <span class="protocol-level">Level 1</span>
+                    <div class="card-cta">
+                        <i class="fas fa-arrow-right"></i> <span data-i18n="learnMore">Learn More</span>
+                    </div>
+                </div>
+
+                <!-- Protocol Card 2 -->
+                <div class="protocol-card" onclick="openProtocolModal('moderate')">
+                    <div class="protocol-icon">
+                        <i class="fas fa-spa"></i>
+                    </div>
+                    <h3 data-i18n="moderateProtocol">Moderate Protocol</h3>
+                    <p data-i18n="moderateDesc">For normal skin. 2g peeling powder, 6 minutes massage.</p>
+                    <span class="protocol-level">Level 2</span>
+                    <div class="card-cta">
+                        <i class="fas fa-arrow-right"></i> <span data-i18n="learnMore">Learn More</span>
+                    </div>
+                </div>
+
+                <!-- Protocol Card 3 -->
+                <div class="protocol-card" onclick="openProtocolModal('intensive')">
+                    <div class="protocol-icon">
+                        <i class="fas fa-fire"></i>
+                    </div>
+                    <h3 data-i18n="intensiveProtocol">Intensive Protocol</h3>
+                    <p data-i18n="intensiveDesc">For resistant skin. 2g peeling powder, 8 minutes massage.</p>
+                    <span class="protocol-level">Level 3</span>
+                    <div class="card-cta">
+                        <i class="fas fa-arrow-right"></i> <span data-i18n="learnMore">Learn More</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- PDF Embed Viewer -->
+            <div class="pdf-embed-section">
+                <h3 data-i18n="fullGuide">Full Protocol Guide</h3>
+                <!-- PDF Download & Toggle -->
+                <div class="pdf-embed-section">
+                    <p data-i18n="protocolsDesc">Professional guidelines for optimal results</p>
+
+                    <div class="pdf-actions">
+                        <a href="Assets/DERMOCEAN CATALOG_compressed.pdf" class="btn btn-outline" download
+                            data-i18n="downloadCatalog">
+                            <i class="fas fa-download"></i> Download Catalog
+                        </a>
+                        <!-- Changed to open in new tab for reliability -->
+                        <a href="Assets/deromcean protocol_compressed.pdf" target="_blank" class="btn btn-primary">
+                            <i class="fas fa-book-open"></i> <span data-i18n="viewGuide">View Guide</span>
+                        </a>
+                    </div>
+
+                    <!-- Hidden by default PDF Container (Legacy) -->
+                    <div id="pdf-viewer-container" class="pdf-viewer-container">
+                        <div class="pdf-frame-wrapper">
+                            <iframe id="pdf-iframe" data-src="Assets/deromcean protocol_compressed.pdf"
+                                frameborder="0"></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Protocol Modals -->
@@ -181,7 +284,7 @@
                 <div class="footer-col">
                     <h4 data-i18n="contactUs">Contact Us</h4>
                     <ul class="footer-links">
-                        <li><i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com">info@dermocéan.com</a>
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:info@dermoc├⌐an.com">info@dermoc├⌐an.com</a>
                         </li>
                         <li><i class="fas fa-phone"></i> +90 545 533 6663</li>
                         <li><i class="fab fa-instagram"></i> @dermoceanofficial</li>
@@ -190,7 +293,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2024 DERMOCÉAN. All Rights Reserved.</p>
+                <p>&copy; 2024 DERMOC├ëAN. All Rights Reserved.</p>
 
                 <div class="payment-methods" style="justify-content: center; margin-top: 1rem;">
                     <div class="payment-method">
@@ -212,7 +315,7 @@
     <!-- Mobile Sidebar -->
     <div class="mobile-menu-sidebar">
         <div class="mobile-menu-header">
-            <img src="images/logo/dermocean-logo.svg" alt="DERMOCÉAN" style="height: 40px;">
+            <img src="images/logo/dermocean-logo.svg" alt="DERMOC├ëAN" style="height: 40px;">
             <button class="close-menu"><i class="fas fa-times"></i></button>
         </div>
         <div class="mobile-menu-items">
@@ -225,10 +328,14 @@
             <a href="register.html" data-i18n="register">B2B Register</a>
         </div>
         <div class="mobile-lang-selector">
-            <a href="#" onclick="changeLanguage('en')" data-lang="en"><span>🇺🇸</span> EN</a>
-            <a href="#" onclick="changeLanguage('fr')" data-lang="fr"><span>🇫🇷</span> FR</a>
-            <a href="#" onclick="changeLanguage('ar')" data-lang="ar"><span>🇸🇦</span> AR</a>
-            <a href="#" onclick="changeLanguage('tr')" data-lang="tr"><span>🇹🇷</span> TR</a>
+            <a href="#" onclick="changeLanguage('en')" data-lang="en"><span class="flag-icon flag-icon-us"></span>
+                EN</a>
+            <a href="#" onclick="changeLanguage('fr')" data-lang="fr"><span class="flag-icon flag-icon-fr"></span>
+                FR</a>
+            <a href="#" onclick="changeLanguage('ar')" data-lang="ar"><span class="flag-icon flag-icon-sa"></span>
+                AR</a>
+            <a href="#" onclick="changeLanguage('tr')" data-lang="tr"><span class="flag-icon flag-icon-tr"></span>
+                TR</a>
         </div>
     </div>
 
