--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>DERMOC├ëAN | Professional Skincare</title>
+    <title>DERMOCÉAN | Professional Skincare</title>
 
     <!-- Fonts -->
     <link
@@ -25,8 +25,8 @@
     <div class="top-bar">
         <div class="container">
             <div class="contact-info">
-                <i class="fas fa-envelope"></i> <a href="mailto:info@dermoc├⌐an.com"
-                    style="color: inherit; text-decoration: none;">info@dermoc├⌐an.com</a>
+                <i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com"
+                    style="color: inherit; text-decoration: none;">info@dermocéan.com</a>
             </div>
             <div class="lang-selector">
                 <a href="#" onclick="changeLanguage('en')" class="active" data-lang="en"><span
@@ -45,7 +45,7 @@
     <header>
         <nav class="container">
             <a href="index.html" class="logo">
-                <img src="images/logo/dermocean-logo.svg" alt="DERMOC├ëAN">
+                <img src="images/logo/dermocean-logo.svg" alt="DERMOCÉAN">
             </a>
 
             <div class="menu-toggle">
@@ -80,23 +80,23 @@
                     <div class="case-tabs">
                         <button class="case-tab active" data-case="pigmentation" onclick="switchCase('pigmentation')">
                             <span class="tab-en">Pigmentation</span>
-                            <span class="tab-ar">╪¬╪╡╪¿╪║╪º╪¬</span>
+                            <span class="tab-ar">تصبغات</span>
                         </button>
                         <button class="case-tab" data-case="acne" onclick="switchCase('acne')">
                             <span class="tab-en">Acne</span>
-                            <span class="tab-ar">╪¡╪¿ ╪º┘ä╪┤╪¿╪º╪¿</span>
+                            <span class="tab-ar">حب الشباب</span>
                         </button>
                         <button class="case-tab" data-case="scars" onclick="switchCase('scars')">
                             <span class="tab-en">Acne Scars</span>
-                            <span class="tab-ar">╪ó╪½╪º╪▒ ╪º┘ä╪¡╪¿┘ê╪¿</span>
+                            <span class="tab-ar">آثار الحبوب</span>
                         </button>
                         <button class="case-tab" data-case="lines" onclick="switchCase('lines')">
                             <span class="tab-en">Fine Lines</span>
-                            <span class="tab-ar">╪¬╪¼╪º╪╣┘è╪»</span>
+                            <span class="tab-ar">تجاعيد</span>
                         </button>
                         <button class="case-tab" data-case="pores" onclick="switchCase('pores')">
                             <span class="tab-en">Pores</span>
-                            <span class="tab-ar">┘à╪│╪º┘à</span>
+                            <span class="tab-ar">مسام</span>
                         </button>
                     </div>
                 </div>
@@ -191,13 +191,12 @@
                             data-i18n="downloadCatalog">
                             <i class="fas fa-download"></i> Download Catalog
                         </a>
-                        <!-- Changed to open in new tab for reliability -->
-                        <a href="Assets/deromcean protocol_compressed.pdf" target="_blank" class="btn btn-primary">
+                        <button class="btn btn-primary" onclick="togglePdfViewer()" id="pdf-toggle-btn">
                             <i class="fas fa-book-open"></i> <span data-i18n="viewGuide">View Guide</span>
-                        </a>
+                        </button>
                     </div>
 
-                    <!-- Hidden by default PDF Container (Legacy) -->
+                    <!-- Hidden by default PDF Container -->
                     <div id="pdf-viewer-container" class="pdf-viewer-container">
                         <div class="pdf-frame-wrapper">
                             <iframe id="pdf-iframe" data-src="Assets/deromcean protocol_compressed.pdf"
@@ -213,9 +212,7 @@
     <div class="protocol-modal" id="protocol-modal">
         <div class="protocol-modal-content">
             <button class="modal-close" onclick="closeProtocolModal()"><i class="fas fa-times"></i></button>
-            <div id="protocol-image-container" style="text-align: center; margin-bottom: 1rem;">
-                <!-- Dynamically populated -->
-            </div>
+            <div id="protocol-image-container" style="text-align: center; margin-bottom: 1rem;"></div>
             <h3 id="protocol-title"></h3>
             <div id="protocol-content">
                 <!-- Content injected by JS -->
@@ -284,7 +281,7 @@
                 <div class="footer-col">
                     <h4 data-i18n="contactUs">Contact Us</h4>
                     <ul class="footer-links">
-                        <li><i class="fas fa-envelope"></i> <a href="mailto:info@dermoc├⌐an.com">info@dermoc├⌐an.com</a>
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com">info@dermocéan.com</a>
                         </li>
                         <li><i class="fas fa-phone"></i> +90 545 533 6663</li>
                         <li><i class="fab fa-instagram"></i> @dermoceanofficial</li>
@@ -293,7 +290,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2024 DERMOC├ëAN. All Rights Reserved.</p>
+                <p>&copy; 2024 DERMOCÉAN. All Rights Reserved.</p>
 
                 <div class="payment-methods" style="justify-content: center; margin-top: 1rem;">
                     <div class="payment-method">
@@ -315,7 +312,7 @@
     <!-- Mobile Sidebar -->
     <div class="mobile-menu-sidebar">
         <div class="mobile-menu-header">
-            <img src="images/logo/dermocean-logo.svg" alt="DERMOC├ëAN" style="height: 40px;">
+            <img src="images/logo/dermocean-logo.svg" alt="DERMOCÉAN" style="height: 40px;">
             <button class="close-menu"><i class="fas fa-times"></i></button>
         </div>
         <div class="mobile-menu-items">
