Add SEO meta tags and implement sticky header wrapper

--- a/index.html
+++ b/index.html
@@ -4,7 +4,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>DERMOCÉAN | Professional Skincare</title>
+    <title>DERMOCÉAN | Professional Skincare for Beauty Centers</title>
+    <meta name="description"
+        content="Dermocean offers professional-grade marine algae skincare products for beauty centers. Discover our Algae Peeling Powder and proven treatment protocols.">
+    <meta name="keywords"
+        content="skincare, beauty center, algae peeling, professional skincare, B2B skincare, dermocosmetics">
+    <meta name="author" content="Dermocean">
+    <link rel="canonical" href="https://dermocéan.com/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dermocéan.com/">
+    <meta property="og:title" content="DERMOCÉAN | Professional Skincare for Beauty Centers">
+    <meta property="og:description"
+        content="Dermocean offers professional-grade marine algae skincare products for beauty centers. Discover our Algae Peeling Powder and proven treatment protocols.">
+    <meta property="og:image" content="https://dermocéan.com/images/logo/dermocean-logo.svg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://dermocéan.com/">
+    <meta property="twitter:title" content="DERMOCÉAN | Professional Skincare for Beauty Centers">
+    <meta property="twitter:description"
+        content="Dermocean offers professional-grade marine algae skincare products for beauty centers. Discover our Algae Peeling Powder and proven treatment protocols.">
+    <meta property="twitter:image" content="https://dermocéan.com/images/logo/dermocean-logo.svg">
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Dermocean",
+      "url": "https://dermocéan.com/",
+      "logo": "https://dermocéan.com/images/logo/dermocean-logo.svg",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+90-545-533-6663",
+        "contactType": "customer service",
+        "areaServed": ["TR", "SA", "FR", "US"],
+        "availableLanguage": ["en", "ar", "fr", "tr"]
+      },
+      "sameAs": [
+        "https://instagram.com/dermoceanofficial"
+      ]
+    }
+    </script>
 
     <!-- Fonts -->
     <link
@@ -21,48 +64,54 @@
 
 <body>
 
-    <!-- Top Bar -->
-    <div class="top-bar">
-        <div class="container">
-            <div class="contact-info">
-                <i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com"
-                    style="color: inherit; text-decoration: none;">info@dermocéan.com</a>
-            </div>
-            <div class="lang-selector">
-                <a href="#" onclick="changeLanguage('en')" class="active" data-lang="en"><span
-                        class="flag-icon flag-icon-us"></span> EN</a>
-                <a href="#" onclick="changeLanguage('fr')" data-lang="fr"><span class="flag-icon flag-icon-fr"></span>
-                    FR</a>
-                <a href="#" onclick="changeLanguage('ar')" data-lang="ar"><span class="flag-icon flag-icon-sa"></span>
-                    AR</a>
-                <a href="#" onclick="changeLanguage('tr')" data-lang="tr"><span class="flag-icon flag-icon-tr"></span>
-                    TR</a>
+    <!-- Sticky Header Wrapper -->
+    <div class="site-header-wrapper">
+        <!-- Top Bar -->
+        <div class="top-bar">
+            <div class="container">
+                <div class="contact-info">
+                    <i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com"
+                        style="color: inherit; text-decoration: none;">info@dermocéan.com</a>
+                </div>
+                <div class="lang-selector">
+                    <a href="#" onclick="changeLanguage('en')" class="active" data-lang="en"><span
+                            class="flag-icon flag-icon-us"></span> EN</a>
+                    <a href="#" onclick="changeLanguage('fr')" data-lang="fr"><span
+                            class="flag-icon flag-icon-fr"></span>
+                        FR</a>
+                    <a href="#" onclick="changeLanguage('ar')" data-lang="ar"><span
+                            class="flag-icon flag-icon-sa"></span>
+                        AR</a>
+                    <a href="#" onclick="changeLanguage('tr')" data-lang="tr"><span
+                            class="flag-icon flag-icon-tr"></span>
+                        TR</a>
+                </div>
             </div>
         </div>
+
+        <!-- Header -->
+        <header>
+            <nav class="container">
+                <a href="index.html" class="logo">
+                    <img src="images/logo/dermocean-logo.svg" alt="DERMOCÉAN">
+                </a>
+
+                <div class="menu-toggle">
+                    <i class="fas fa-bars"></i>
+                </div>
+
+                <ul class="nav-links">
+                    <li><a href="index.html" data-i18n="home">Home</a></li>
+                    <li><a href="about.html" data-i18n="aboutUs">About</a></li>
+                    <li><a href="#products" data-i18n="products">Products</a></li>
+                    <li><a href="how-to-use.html" data-i18n="howToUse">How to Use</a></li>
+                    <li><a href="articles.html" data-i18n="articles">Articles</a></li>
+                    <li><a href="videos.html" data-i18n="videos">Videos</a></li>
+                    <li><a href="register.html" class="btn btn-outline" data-i18n="register">B2B Register</a></li>
+                </ul>
+            </nav>
+        </header>
     </div>
-
-    <!-- Header -->
-    <header>
-        <nav class="container">
-            <a href="index.html" class="logo">
-                <img src="images/logo/dermocean-logo.svg" alt="DERMOCÉAN">
-            </a>
-
-            <div class="menu-toggle">
-                <i class="fas fa-bars"></i>
-            </div>
-
-            <ul class="nav-links">
-                <li><a href="index.html" data-i18n="home">Home</a></li>
-                <li><a href="about.html" data-i18n="aboutUs">About</a></li>
-                <li><a href="#products" data-i18n="products">Products</a></li>
-                <li><a href="how-to-use.html" data-i18n="howToUse">How to Use</a></li>
-                <li><a href="articles.html" data-i18n="articles">Articles</a></li>
-                <li><a href="videos.html" data-i18n="videos">Videos</a></li>
-                <li><a href="register.html" class="btn btn-outline" data-i18n="register">B2B Register</a></li>
-            </ul>
-        </nav>
-    </header>
 
     <!-- Hero Section -->
     <section class="hero">
